feat: tests with API client
