# api/openapi.yaml
@@ -52,7 +52,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/User"
 
-  /v1/assets/{path}:
+  /v1/assets:
     get:
       tags:
         - assets
@@ -60,12 +60,12 @@ paths:
       operationId: getAsset
       parameters:
         - name: path
-          in: path
-          description: path to asset
+          in: query
+          description: relative path to asset file
           required: true
-          style: simple
           schema:
             type: string
+          example: "images/photos/vacation.jpg"
       responses:
         "200":
           description: return asset
